@@ -4,6 +4,7 @@ Denora v1.4.5-SVN
 -----------------
 
 Additions
+10/12/30 r379 [4] Added GeoIP IPv6 support
 10/12/29 r374 [2] Added support for user IPv6 addresses with scarynet
 10/12/29 r373 [2] Added support for user IPv6 addresses with ircu and unrealircd
 10/05/25 r355 [3] Added Portuguese language file
